kubernetes/todo-app-frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
  namespace: todo-app
  labels:
    app: todo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
      tier: frontend
  template:
    metadata:
      labels:
        app: todo-frontend
        tier: frontend
    spec:
      containers:
        - name: todo-frontend-container
          image: cipriantarlev91/nable-fullstack-docker-app-frontend-kubernetes:lastest
          ports:
            - containerPort: 3000
