kubernetes/todo-mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: todo-app
spec:
  selector:
    app: todo-mysql
  ports:
    - name: mysqldb
      port: 3306
      targetPort: 3306
  clusterIP: None
